--- a/.gitignore
+++ b/.gitignore
@@ -131,3 +131,16 @@ dmypy.json
 # Pyre type checker
 .pyre/
 outputs
+
+# dependency libraries
+ctcdecode/
+warp-rnnt/
+
+# vocab / result data files
+*.txt
+*.csv
+
+# train / test shell codes
+openspeech_cli/
+inference/
+*.sh
